# connectedhomeip

./: BUILD.gn
examples/tv-app/android/: BUILD.gn
examples/tv-app/android/include/: cluster-init.cpp
examples/tv-app/android/java/: ContentLauncherManager.cpp  MediaInputManager.cpp  MediaPlaybackManager.cpp  TvChannelManager.cpp  (+1 more)
scripts/: gen_test_driver.py
scripts/examples/: android_app.sh  gn_to_cmake.py
src/android/CHIPTVServer/: .gitignore  gradle.properties  settings.gradle
src/android/CHIPTest/: build.gradle
src/android/CHIPTool/: .gitignore  build.gradle
src/controller/java/: AndroidCallbacks.cpp  AndroidDeviceControllerWrapper.cpp  AndroidDeviceControllerWrapper.h  BUILD.gn  CHIPDeviceController-JNI.cpp
src/lib/support/: BUILD.gn  JniReferences.cpp  JniReferences.h  JniTypeWrappers.h
src/platform/: BUILD.gn  device.gni
src/platform/android/: AndroidChipPlatform-JNI.cpp  AndroidChipPlatform-JNI.h  AndroidConfig.cpp  BLEManagerImpl.cpp  BLEManagerImpl.h  BUILD.gn  CHIPDevicePlatformEvent.h  ConfigurationManagerImpl.cpp  ConfigurationManagerImpl.h  ConnectivityManagerImpl.cpp  ConnectivityManagerImpl.h  DeviceNetworkProvisioningDelegateImpl.cpp  KeyValueStoreManagerImpl.cpp  KeyValueStoreManagerImpl.h  MdnsImpl.cpp  PlatformManagerImpl.cpp  PlatformManagerImpl.h  PosixConfig.cpp
src/platform/tests/: BUILD.gn  TestKeyValueStoreMgr.cpp
src/test_driver/android/: BUILD.gn  CHIPTest-JNI.cpp
src/test_driver/android/src/chip/test/: TestEngine.java  TestEngineException.java
zzz_generated/tv-app/zap-generated/: CHIPClusters.cpp  CHIPClusters.h
(+52 files in other folders)
