# Copyright (c) 2020 Project CHIP Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build_overrides/build.gni")
import("//build_overrides/chip.gni")

import("${build_root}/config/android_abi.gni")
import("${chip_root}/build/chip/java/rules.gni")
import("//build_overrides/nlunit_test.gni")

shared_library("jni") {
  output_name = "libCHIPTest"

  sources = [
    "CHIPTest-JNI.cpp",
  ]

  deps = [
    "${chip_root}/src/lib/core:core",
    "${chip_root}/src/lib/support:support",
    "${nlunit_test_root}:nlunit-test",
  ]

  public_configs = [ 
  ]

  output_dir = "${root_out_dir}/lib/jni/${android_abi}"
}

android_library("java") {
  output_name = "CHIPTest.jar"

  data_deps = [
    ":jni",
    "${chip_root}/build/chip/java:shared_cpplib",
  ]

  sources = [
    "src/chip/test/TestEngine.java",
    "src/chip/test/TestEngineException.java",
  ]

  javac_flags = [ "-Xlint:deprecation" ]
}
